@@ -12,6 +12,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - [API_PARSER] [GATEWATCHER_ALERTS] Reduce the page size to 10 to avoid timeout errors
 - [PF] [CONF] Add missing CARP rule to allow inter-cluster broadcasting and enable correct MASTER/BACKUP switch
 - [NET] [CARP] Correctly clean system configurations when removing some interface(s) from an existing CARP conf
+- [NET] [CARP] Correctly use existing carp password and priorities for added interface(s) on an existing CARP conf
 
 
 ## [2.29.1] - 2025-08-22
